Remove c lib and other unused files.

--- a/package.json
+++ b/package.json
@@ -1,17 +1,15 @@
 {
-    "bugs" : { "url" : "http://www.couchbase.com/issues/browse/JSCBC",
-               "email" : "support@couchbase.com" },
-    "description": "The official (currently under development) node.js Client Library. Built atop libcouchbase, it aligns the libuv event model of node.js with it's own asynchronous API to allow for native-node feeling high performance development.",
-    "engines" : { "node" : ">=0.8.8" },
-    "homepage": "http://www.couchbase.com/develop",
-    "keywords": ["couchbase", "libcouchbase", "memcached", "nosql", "json", "document"],
-    "main": "./lib/couchbase",
-    "license" : "Apache2",
-    "name": "couchbase",
-    "dependencies": {
-      "bindings": "~1.0.0"
-    },
-    "repository" : { "type" : "git", "url" : "http://github.com/couchbase/couchnode.git" },
-    "version": "0.0.12",
-    "gypfile": true
+  "author": "Simon Pai",
+  "name": "couchfake",
+  "description": "A module that mocks Couchbase 2.0 Node.js API with your own implementation",
+  "version": "0.0.1",
+  "homepage": "http://github.com/simonpai/couchfake",
+  "main": "./couchfake",
+  "repository" : { "type" : "git", "url" : "http://github.com/simonpai/couchfake.git" },
+  "dependencies": {},
+  "devDependencies": {},
+  "optionalDependencies": {},
+  "engines": {
+    "node": "*"
+  }
 }
